@@ -133,34 +133,34 @@ type TracerOptions struct {
 	//   MajorServerVersion(ctx context.Context, refreshStale bool) uint32
 	Transport transport.Transport
 
-	requestDuration       time.Duration
-	metricsInterval       time.Duration
-	maxSpans              int
-	requestSize           int
-	bufferSize            int
-	metricsBufferSize     int
-	sampler               Sampler
-	sanitizedFieldNames   wildcard.Matchers
-	disabledMetrics       wildcard.Matchers
-	ignoreTransactionURLs wildcard.Matchers
-	continuationStrategy  string
-	captureHeaders        bool
-	captureBody           CaptureBodyMode
-	spanFramesMinDuration time.Duration
-	stackTraceLimit       int
-	active                bool
-	recording             bool
-	configWatcher         apmconfig.Watcher
-	breakdownMetrics      bool
-	propagateLegacyHeader bool
-	profileSender         profileSender
-	versionGetter         majorVersionGetter
-	cpuProfileInterval    time.Duration
-	cpuProfileDuration    time.Duration
-	heapProfileInterval   time.Duration
-	exitSpanMinDuration   time.Duration
-	compressionOptions    compressionOptions
-	globalLabels          model.StringMap
+	requestDuration           time.Duration
+	metricsInterval           time.Duration
+	maxSpans                  int
+	requestSize               int
+	bufferSize                int
+	metricsBufferSize         int
+	sampler                   Sampler
+	sanitizedFieldNames       wildcard.Matchers
+	disabledMetrics           wildcard.Matchers
+	ignoreTransactionURLs     wildcard.Matchers
+	continuationStrategy      string
+	captureHeaders            bool
+	captureBody               CaptureBodyMode
+	spanStackTraceMinDuration time.Duration
+	stackTraceLimit           int
+	active                    bool
+	recording                 bool
+	configWatcher             apmconfig.Watcher
+	breakdownMetrics          bool
+	propagateLegacyHeader     bool
+	profileSender             profileSender
+	versionGetter             majorVersionGetter
+	cpuProfileInterval        time.Duration
+	cpuProfileDuration        time.Duration
+	heapProfileInterval       time.Duration
+	exitSpanMinDuration       time.Duration
+	compressionOptions        compressionOptions
+	globalLabels              model.StringMap
 }
 
 // initDefaults updates opts with default values.
@@ -238,9 +238,9 @@ func (opts *TracerOptions) initDefaults(continueOnError bool) error {
 		captureBody = CaptureBodyOff
 	}
 
-	spanFramesMinDuration, err := initialSpanFramesMinDuration()
+	spanStackTraceMinDuration, err := initialSpanStackTraceMinDuration()
 	if failed(err) {
-		spanFramesMinDuration = defaultSpanFramesMinDuration
+		spanStackTraceMinDuration = defaultSpanStackTraceMinDuration
 	}
 
 	stackTraceLimit, err := initialStackTraceLimit()
@@ -346,7 +346,7 @@ func (opts *TracerOptions) initDefaults(continueOnError bool) error {
 	opts.breakdownMetrics = breakdownMetricsEnabled
 	opts.captureHeaders = captureHeaders
 	opts.captureBody = captureBody
-	opts.spanFramesMinDuration = spanFramesMinDuration
+	opts.spanStackTraceMinDuration = spanStackTraceMinDuration
 	opts.stackTraceLimit = stackTraceLimit
 	opts.active = active
 	opts.recording = recording
@@ -501,8 +501,8 @@ func newTracer(opts TracerOptions) *Tracer {
 	t.setLocalInstrumentationConfig(envTransactionSampleRate, func(cfg *instrumentationConfigValues) {
 		cfg.sampler = opts.sampler
 	})
-	t.setLocalInstrumentationConfig(envSpanFramesMinDuration, func(cfg *instrumentationConfigValues) {
-		cfg.spanFramesMinDuration = opts.spanFramesMinDuration
+	t.setLocalInstrumentationConfig(envSpanStackTraceMinDuration, func(cfg *instrumentationConfigValues) {
+		cfg.spanStackTraceMinDuration = opts.spanStackTraceMinDuration
 	})
 	t.setLocalInstrumentationConfig(envStackTraceLimit, func(cfg *instrumentationConfigValues) {
 		cfg.stackTraceLimit = opts.stackTraceLimit
@@ -804,11 +804,11 @@ func (t *Tracer) SetSpanCompressionSameKindMaxDuration(v time.Duration) {
 	})
 }
 
-// SetSpanFramesMinDuration sets the minimum duration for a span after which
+// SetSpanStackTraceMinDuration sets the minimum duration for a span after which
 // we will capture its stack frames.
-func (t *Tracer) SetSpanFramesMinDuration(d time.Duration) {
+func (t *Tracer) SetSpanStackTraceMinDuration(d time.Duration) {
 	t.setLocalInstrumentationConfig(envMaxSpans, func(cfg *instrumentationConfigValues) {
-		cfg.spanFramesMinDuration = d
+		cfg.spanStackTraceMinDuration = d
 	})
 }
 
