@@ -24,6 +24,7 @@ endif::[]
 https://github.com/elastic/apm-agent-go/compare/v2.1.0...main[View commits]
 
 - Global labels are now parsed when the tracer is constructed, instead of parsing only once on package initialization {pull}1290[#(1290)]
+- Rename span_frames_min_duration to span_stack_trace_min_duration {pull}1285[#(1285)]
 
 [[release-notes-2.x]]
 === Go Agent version 2.x
